--- a/Changes
+++ b/Changes
@@ -17,3 +17,14 @@ Revision history for Perl extension Clone-Closure.
 0.03    2009-06-16
     Don't clone named subs any more.
     Fix some 5.10 breakage.
+
+0.04    2009-06-21
+    Just a minor tweak to the tests for 5.10.0, which has a bug we need
+    to avoid tickling.
+
+0.04_01 2009-11-14
+    - Portability fixes for 5.11.x.
+
+0.05    2010-12-19
+    - Portability fixes for 5.13.x.
+    - Switch to Module::Build.
